--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bson": "^6.8.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.24",
     "mongodb": "^6.7.0",
     "react": "^18.2.0",
