--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-social-icons": "^6.18.0",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
